# golden-spiral-yew

./: Cargo.toml  README.md  styles.css
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: spiral.rs
