[package]
name = "golden-spiral-rust-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4.17"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d' 
]

[workspace]
members = ["src-tauri"]
